data/derived/sp14/progs/unify/prog2397.ml.out
Characters 332-337:
  | (_ , _) -> (0,0)
               ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c * 'd) list
